Lista la ronda de cartas.